<resources>
    <string name="app_name">403 Final Project</string>
    <string name="app_title">Waggin Tail</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="city_name">City</string>
    <string name="state">State</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="description">Description</string>
    <string name="street_addy">Address</string>
    <string name="country">Country</string>
    <string name="walk_rate">Walk Rate</string>
    <string name="phone_number">Phone Number</string>

    <string name="short_desc">Short Description</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_info_scrolling">InfoScrolling</string>
    <string name="app_description">
        WagginTrail is a user-friendly app tailored for connecting individuals seeking dog walks with experienced walkers, particularly when owners are busy or away. Users can effortlessly communicate by utilizing email addresses and phone numbers associated with their individual profiles. For those in need of dog walking services, the app offers the convenience of searching for nearby walkers or exploring them on a map view. Once a suitable walker is found, users can easily schedule an appointment.
    </string>
    <string name="app_instructions">
        1. Update your profile on the profile page. Decide there if you would like ot become a walker.\n
        2. Go to your home page to view walkers in your area.\n
        3. Go to your pets page to view and add your pets.\n
        4. Go to your appointments page to view the appointments that you have booked/appointments that you are booked for.
    </string>
    <string name="app_credits">
        Appointment page icon made by Freepik from www.flaticon.com\n
        Pets page icon made by Freepik from www.flaticon.com\n
        Home page icon made by Kiranshastry from www.flaticon.com\n
        Profile page icon made by Freepik from www.flaticon.com\n
        Info page icon made by Freepik from www.flaticon.com"
    </string>
    <string name="action_settings">Settings</string>


</resources>