<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    android:backgroundTint="@color/primary_color"
    tools:context=".StartupLogin">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#C65151"
        android:backgroundTint="#351010"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="244dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/primary_color"
                android:text="Sign Up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="255dp"
                android:layout_height="51dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/primary_color"
                android:text="Sign In"
                app:layout_constraintBottom_toTopOf="@+id/btnSignUp"
                app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
                app:layout_constraintStart_toStartOf="@+id/btnSignUp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="120dp"
                android:drawableLeft="@drawable/baseline_password_24"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
                app:layout_constraintEnd_toEndOf="@+id/btnSignIn"
                app:layout_constraintStart_toStartOf="@+id/btnSignIn" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/baseline_account_circle_24"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
                app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtAppTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:backgroundTint="@color/primary_color"
        android:gravity="center"
        android:text="@string/app_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTestResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>